# Bersona

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  README.md  ROADMAP.md  TODO-1.1.md  WHITEPAPER.md  __init__.py  astrology_kernel.py  constants.py  minimal_example.py  models.py  prompts.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  release.yml
examples/: fallback_demo.py  parse_demo.py  structuring_demo.py  structuring_prompt_preview.py
scripts/: bump_version.py
src/bersona/kernels/: __init__.py  astrology_kernel.py  base.py  bazi_kernel.py
src/bersona/llm/: clients.py  prompts.py
src/bersona/structuring/: __init__.py  cache.py  engine.py  fallback.py  metrics.py  parser.py  schemas.py
src/bersona/utils/: location.py
tests/kernels/: test_astrology_kernel.py  test_bazi_kernel.py
tests/structuring/: test_structuring_pipeline.py
